[package]
name = "task_khal"
version = "0.1.1"
authors = ["Francesco Piva <francesco@piva.online>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ics = "0.4"

[[bin]]
path = "src/main.rs"
name = "task_khal"
